--- a/main.html
+++ b/main.html
@@ -8,9 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+	
+	<h1>Goa</h1>
+	<br>
+	<p>Situated on the western coast of India, Goa is primarily known for being the hub of partying and indulging into exciting water sports and activities. However, these pleasure-seeking qualities actually happen to be part of North Goa. It is crowded by tourists all through the year and turns among the most selling holiday packages in India. On the other hand, South Goa is a place that offers you solace and relaxation. South Goa is home to a large number of pristine sparkling beaches and located away from the hustles and bustles of the main city. If you go to explore Old Goa, you will come across a number of local churches, temples and mosques along with local flora and fauna.
+	</p>
 
+	<h2>5 attractions in the Goa</h2>
+	<ol>
+		<li>Calangute Beach</li>
+		<li>Fort Aguada</li>
+		<li>Water Sports in Goa</li>
+		<li>Dudhsagar Falls</li>
+		<li>Anjuna Beach</li>
+	</ol>
+
+	<h2>must-try foods in Goa</h2>
+	<ul>
+		<li><b>Goan Fish Curry</b></li>
+		<li><b>Chicken Cafreal</b></li>
+		<li><b>Goan Pork Vindaloo</b></li>
+		<li><b>Chicken Xacuti</b></li>
+		<li><b>Shark Ambot Tik</b></li>
+	</ul>
+			
+
+	
 </body>
 
 </html>
