--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
 
 	<h2>5 attractions in the Goa</h2>
 	<ol>
-		<li>Calangute Beach</li>
-		<li>Fort Aguada</li>
-		<li>Water Sports in Goa</li>
-		<li>Dudhsagar Falls</li>
-		<li>Anjuna Beach</li>
+		<li><b>Calangute Beach</b></li>
+		<li><b>Fort Aguada</b></li>
+		<li><b>Water Sports in Goa</b></li>
+		<li><b>Dudhsagar Falls</b></li>
+		<li><b>Anjuna Beach</b></li>
 	</ol>
 
 	<h2>must-try foods in Goa</h2>
