--- a/main.html
+++ b/main.html
@@ -17,20 +17,20 @@
 
 	<h2>5 attractions in the Goa</h2>
 	<ol>
-		<li><b>Calangute Beach</b></li>
-		<li><b>Fort Aguada</b></li>
-		<li><b>Water Sports in Goa</b></li>
-		<li><b>Dudhsagar Falls</b></li>
-		<li><b>Anjuna Beach</b></li>
+		<li><b><i>Calangute Beach</i></b></li>
+		<li><b><i>Fort Aguada</i></b></li>
+		<li><b><i>Water Sports in Goa</i></b></li>
+		<li><b><i>Dudhsagar Falls</i></b></li>
+		<li><b><i>Anjuna Beach</i></b></li>
 	</ol>
 
 	<h2>must-try foods in Goa</h2>
 	<ul>
-		<li><b>Goan Fish Curry</b></li>
-		<li><b>Chicken Cafreal</b></li>
-		<li><b>Goan Pork Vindaloo</b></li>
-		<li><b>Chicken Xacuti</b></li>
-		<li><b>Shark Ambot Tik</b></li>
+		<li><b><i>Goan Fish Curry</i></b></li>
+		<li><b><i>Chicken Cafreal</i></b></li>
+		<li><b><i>Goan Pork Vindaloo</i></b></li>
+		<li><b><i>Chicken Xacuti</i></b></li>
+		<li><b><i>Shark Ambot Tik</i></b></li>
 	</ul>
 			
 
